force-app/main/default/objects/numm__Stock__c/numm__Stock__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Nom de Stock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>