force-app/main/default/objects/numm__Stock__c/fields/numm__Compte_Factur_Client__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_Factur_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Facturé (Client)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>