force-app/main/default/objects/numm__Stock__c/fields/numm__Compte_Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>numm__Compte_Fournisseur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Fournisseur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stocks (Compte Fournisseur)</relationshipLabel>
    <relationshipName>Stocks_fou</relationshipName>
    <type>Lookup</type>
</CustomField>