force-app/main/default/objects/numm__Stock__c/fields/numm__Conditionnement__c.field-meta.xml
<CustomField>
    <fullName>numm__Conditionnement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conditionnement</label>
    <referenceTo>numm__Conditionnement__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>