force-app/main/default/objects/numm__Stock__c/fields/numm__Date__c.field-meta.xml
<CustomField>
    <fullName>numm__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>