force-app/main/default/objects/numm__Stock__c/fields/numm__Entrepot__c.field-meta.xml
<CustomField>
    <fullName>numm__Entrepot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entrepot</label>
    <referenceTo>numm__Entrepot__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>