force-app/main/default/objects/numm__Stock__c/fields/numm__Net_tare__c.field-meta.xml
<CustomField>
    <fullName>numm__Net_tare__c</fullName>
    <formula>numm__Quantit_nette_o__c - (numm__Tare_du_conditionnement__c * numm__Quantit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net tare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>