force-app/main/default/objects/numm__Stock__c/fields/numm__Origine__c.field-meta.xml
<CustomField>
    <fullName>numm__Origine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock d&#39;origine</label>
    <referenceTo>numm__Stock__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>