force-app/main/default/objects/numm__Stock__c/fields/numm__Prix__c.field-meta.xml
<CustomField>
    <fullName>numm__Prix__c</fullName>
    <label>Prix unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>