force-app/main/default/objects/numm__Stock__c/fields/numm__Prix_Total__c.field-meta.xml
<CustomField>
    <fullName>numm__Prix_Total__c</fullName>
    <formula>numm__Prix__c *   numm__Net_tare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>