force-app/main/default/objects/numm__Stock__c/fields/numm__Produit__c.field-meta.xml
<CustomField>
    <fullName>numm__Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.numm__Tech_Gerer_en_Stock__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>