force-app/main/default/objects/numm__Stock__c/fields/numm__Quantit_brute_o__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_brute_o__c</fullName>
    <formula>numm__Conditionnement__r.numm__Contenance_brute__c  *  numm__Quantit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantité brute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>