force-app/main/default/objects/numm__Stock__c/fields/numm__Quantit_disponible__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_disponible__c</fullName>
    <formula>numm__Quantit__c  +  numm__Quantit_r_serv_e__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantité disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>