force-app/main/default/objects/numm__Stock__c/fields/numm__Quantit_nette_o__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_nette_o__c</fullName>
    <formula>numm__Quantit_brute_o__c  -  numm__Tare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantité nette</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>