force-app/main/default/objects/numm__Stock__c/fields/numm__Quantit_r_serv_e__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_r_serv_e__c</fullName>
    <label>Qte réservée</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>