force-app/main/default/objects/numm__Stock__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Réservé</fullName>
            </value>
            <value>
                <fullName>Entrée</fullName>
                <default>true</default>
                <label>Entrée</label>
            </value>
            <value>
                <fullName>Sortie</fullName>
            </value>
            <value>
                <fullName>Changement d&#39;entrepôt</fullName>
            </value>
            <value>
                <fullName>Rebut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>