force-app/main/default/objects/numm__Stock__c/fields/numm__Tare__c.field-meta.xml
<CustomField>
    <fullName>numm__Tare__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>