force-app/main/default/objects/numm__Stock__c/fields/numm__Tare_du_conditionnement__c.field-meta.xml
<CustomField>
    <fullName>numm__Tare_du_conditionnement__c</fullName>
    <formula>numm__Conditionnement__r.numm__Tare_du_contenant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tare du conditionnement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>