force-app/main/default/objects/numm__Stock__c/fields/numm__TECH_isOk__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_isOk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_isOk</label>
    <type>Checkbox</type>
</CustomField>