force-app/main/default/objects/numm__Stock__c/fields/numm__Unit_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>numm__Unit_de_facturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unité de facturation</label>
    <referenceTo>numm__Unit__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>