force-app/main/default/objects/numm__Stock__c/fields/numm__Unit_de_facturation_o__c.field-meta.xml
<CustomField>
    <fullName>numm__Unit_de_facturation_o__c</fullName>
    <formula>numm__Conditionnement__r.numm__UnitLookUp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unité fac</label>
    <type>Text</type>
</CustomField>