force-app/main/default/objects/numm__Stock__c/validationRules/numm__Produit_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Produit_obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>numm__Produit__c  = &#39;&#39;</errorConditionFormula>
    <errorDisplayField>numm__Produit__c</errorDisplayField>
    <errorMessage>Le produit est obligatoire</errorMessage>
</ValidationRule>