force-app/main/default/objects/numm__Stock__c/validationRules/numm__qtt_de_conditionnement_non_null.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__qtt_de_conditionnement_non_null</fullName>
    <active>true</active>
    <errorConditionFormula>numm__Conditionnement__r.numm__Contenance_brute__c  &lt; 0</errorConditionFormula>
    <errorMessage>Le conditionnement n&#39;a pas de contenance brute.</errorMessage>
</ValidationRule>