force-app/main/default/objects/numm__Stock__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>numm__Statut__c</columns>
    <columns>NAME</columns>
    <columns>numm__Date__c</columns>
    <columns>numm__Conditionnement__c</columns>
    <columns>numm__Quantit__c</columns>
    <columns>numm__Entrepot__c</columns>
    <columns>numm__Produit__c</columns>
    <columns>numm__Quantit_Brute__c</columns>
    <columns>numm__Quantit_nette__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>